Fix radio input align

--- a/polls/static/polls/style.css
+++ b/polls/static/polls/style.css
@@ -123,6 +123,11 @@ ol {
     padding: 5px;
 }
 
+input[type="radio"] {
+    margin-top: -1px;
+    vertical-align: middle;
+}
+
 .voteBox {
     margin: 1em;
     width: 100%;
